# cargo-anatomy

./: .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
cargo-anatomy/: CHANGELOG.md  Cargo.toml
cargo-anatomy/src/: analysis.rs  lib.rs  main.rs  metrics.rs  tests.rs  utils.rs
cargo-anatomy/tests/: cli.rs
docs/: output-schema.json  output-schema.md
