[package]
name = "cargo-anatomy"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.18"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
