[package]
name = "cargo-anatomy"
version = "0.5.0"
edition = "2021"
authors = ["Katsutoshi Itoh"]
description = "Analyze Rust workspaces and report package metrics"
license = "MIT"
repository = "https://github.com/cutsea110/cargo-anatomy"
readme = "../README.md"
homepage = "https://github.com/cutsea110/cargo-anatomy"
keywords = ["cargo", "metrics", "analysis", "workspace", "cli"]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
    "command-line-utilities",
]

[dependencies]
cargo_metadata = "0.21"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
getopts = "0.2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

[[bin]]
name = "cargo-anatomy"
path = "src/main.rs"
